2002-04-27  Laurent Oudot  <oudot.laurent@wanadoo.fr>

	* plugins/simple/ruleset/simple.rules :
	Added ZyXEL routers and firewalls support.
	It will help at dealing with ZyXEL network equipments used with 
	security filtering features.

2002-04-26  Laurent Oudot  <oudot.laurent@wanadoo.fr>

	* plugins/simple/ruleset/simple.rules :
	Added a contrib from Arnaud Guignard <arnaud.guignard@free.fr> 
	(plugin regex rules) and me (for the cisco part) that aims at
	dealing with cisco security routers alerts.
	It's just a beginning that will be improved in the future.

2002-04-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c (parse_ruleset): 
	strip out \n.
	
	(parse_rule): handle include rule.

	(parse_include): new function, parse include rule.
	If the path is not absolute, then we append the current
	rulesetdir to this filename.

2002-04-25  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	revert 2002-04-24, which was not needed (sscanf don't need
	precision).

2002-04-24  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	In order for the printf() family function to put a limit to 
	the len of a copied string, a precision have to be given
	(%255s is not valid, %.255s is).

2002-04-12  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (read_logfile): 
	(file_server_wake_up): 

	stop using fgets to read the logfile: we now use getc_unlocked,
	and handle fine the case where :

	- the buffer is too small.
	- we meet EOF before meeting EOL.

	which avoid us being desynchronized. The read buffer is now
	per file monitor.
	
2002-04-08  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c: try to do time consuming stuff
	at initialisation time.

	* src/regex.c: 
	instead of searching at runtime for the plugin to use
	(using string compareason), resolve plugin dependency