@@ -1,3 +1,15 @@
+2002-04-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* src/file-server.c (file_server_monitor_file): 
+	use calloc() to allocate the monitor_fd_t object.
+	This fix a possible unitialized read.
+
+	* plugins/simple/simple.c (parse_include): 
+	return -2 on success.
+	
+	(parse_rule): -1 mean error, other value < 0 just
+	mean to stop the processing for this line.
+
 2002-04-27  Laurent Oudot  <oudot.laurent@wanadoo.fr>
 
 	* plugins/simple/ruleset/simple.rules :
